--- a/roles/software/tasks/vscode.yml
+++ b/roles/software/tasks/vscode.yml
@@ -150,6 +150,7 @@
         - ms-vscode.cpptools
         - ms-vscode.cpptools-extension-pack
         - ms-vscode.cpptools-themes
+        - ms-vscode.makefile-tools
         - ms-vscode.remote-explorer
         - ms-vsliveshare.vsliveshare
         - natqe.reload
