--- a/roles/software/tasks/vscode.yml
+++ b/roles/software/tasks/vscode.yml
@@ -10,6 +10,12 @@
         executable: /bin/bash
       changed_when: false
 
+    - name: Ensure VSCode settings directory exists | macOS
+      file:
+        path: '{{ ansible_env.HOME }}/Library/Application Support/Code/User'
+        state: directory
+        mode: '0755'
+
     - name: Copy VSCode Settings | macOS # TODO: make it idempotent
       copy:
         src: '{{ role_path }}/files/vsc/settings.json'
@@ -58,6 +64,12 @@
         update_cache: yes
       become: true
 
+    - name: Ensure VSCode settings directory exists | Debian
+      file:
+        path: '{{ ansible_env.HOME }}/.config/Code/User'
+        state: directory
+        mode: '0755'
+
     - name: Copy VSCode settings | Debian
       copy:
         src: '{{ role_path }}/files/vsc/settings.json'
@@ -94,6 +106,12 @@
         name: code
         state: present
         update_cache: yes
+
+    - name: Ensure VSCode settings directory exists | RedHat
+      file:
+        path: '{{ ansible_env.HOME }}/.config/Code/User'
+        state: directory
+        mode: '0755'
 
     - name: Copy VSCode Settings | RedHat
       copy:
