--- a/roles/software/tasks/osx_defaults.yml
+++ b/roles/software/tasks/osx_defaults.yml
@@ -157,3 +157,11 @@
     - name: Remove sound at the beginning
       become: true
       shell: sudo nvram StartupMute=%01
+
+    - name: Reset Finder
+      command: killall Finder
+      changed_when: false
+
+    - name: Restart Dock
+      command: killall Dock
+      changed_when: false
