--- a/roles/software/tasks/osx_defaults.yml
+++ b/roles/software/tasks/osx_defaults.yml
@@ -158,10 +158,10 @@
       become: true
       shell: sudo nvram StartupMute=%01
 
-    - name: Reset Finder
-      command: killall Finder
-      changed_when: false
+    # - name: Reset Finder
+    #   command: killall Finder
+    #   changed_when: false
 
-    - name: Restart Dock
-      command: killall Dock
-      changed_when: false
+    # - name: Restart Dock
+    #   command: killall Dock
+    #   changed_when: false
