--- a/roles/software/tasks/osx_defaults.yml
+++ b/roles/software/tasks/osx_defaults.yml
@@ -155,57 +155,57 @@
           community.general.osx_defaults:
             domain: com.apple.controlcenter
             key: 'NSStatusItem Visible WiFi'
-            type: bool
-            value: true
+            type: int
+            value: 1
 
         - name: Show Bluetooth in Control Center menu
           community.general.osx_defaults:
             domain: com.apple.controlcenter
             key: 'NSStatusItem Visible Bluetooth'
-            type: bool
-            value: true
+            type: int
+            value: 1
 
         - name: Show Focus in Control Center menu
           community.general.osx_defaults:
             domain: com.apple.controlcenter
             key: 'NSStatusItem Visible FocusModes'
-            type: bool
-            value: true
+            type: int
+            value: 1
 
         - name: Show Sound in Control Center menu
           community.general.osx_defaults:
             domain: com.apple.controlcenter
             key: 'NSStatusItem Visible Sound'
-            type: bool
-            value: true
+            type: int
+            value: 1
 
         - name: Show Battery in Control Center menu
           community.general.osx_defaults:
             domain: com.apple.controlcenter
             key: 'NSStatusItem Visible Battery'
-            type: bool
-            value: true
-
-        - name: Show battery percentage in menu bar
-          community.general.osx_defaults:
-            domain: com.apple.menuextra.battery
-            key: ShowPercent
-            type: bool
-            value: true
+            type: int
+            value: 1
 
         - name: Hide AirDrop from Control Center menu
           community.general.osx_defaults:
             domain: com.apple.controlcenter
             key: 'NSStatusItem Visible AirDrop'
-            type: bool
-            value: false
+            type: int
+            value: 0
 
         - name: Hide Spotlight from Control Center menu
           community.general.osx_defaults:
             domain: com.apple.controlcenter
             key: 'NSStatusItem Visible Spotlight'
-            type: bool
-            value: false
+            type: int
+            value: 0
+
+        - name: Hide Now Playing from Control Center menu
+          community.general.osx_defaults:
+            domain: com.apple.controlcenter
+            key: 'NSStatusItem Visible NowPlaying'
+            type: int
+            value: 0
 
     - name: Apply system-level settings
       become: true
