fix: latex wrap

--- a/roles/software/files/vsc/settings.json
+++ b/roles/software/files/vsc/settings.json
@@ -45,6 +45,10 @@
   "latex-workshop.latex.autoClean.run": "never",
   "latex-workshop.view.outline.sync.viewer": true,
 
+  "[latex]": {
+    "editor.wordWrap": "on"
+  },
+
   "latex-workshop.latex.tools": [
     {
       "name": "lualatex",
